c2dascript-transpile/tests/snapshots/snapshots__transpile@macros.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: cat tests/snapshots/macros.das
---
options gen2

def c2da_min_int(a : int; b : int) : int {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int(a : int; b : int) : int {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint(a : uint; b : uint) : uint {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint(a : uint; b : uint) : uint {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_int64(a : int64; b : int64) : int64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int64(a : int64; b : int64) : int64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint64(a : uint64; b : uint64) : uint64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint64(a : uint64; b : uint64) : uint64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
typedef uintptr_t = uint64
struct S {
    i : int
}
typedef U64 = uint64
struct fn_ptrs {
    v : uint64
    fn1 : function?
    fn2 : function?
}
typedef zstd_platform_dependent_type = int64
struct ntlmdata {
    target_info_len : uint
}
[export]
def local_muts() {
    var literal_int : int = 65535
    var literal_bool : bool = bool(1)
    var literal_float : float = float(double(3.14))
    var literal_char : int8 = int8(120)
    var literal_str_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))
    var literal_str : array<int8> = "hello"
    var literal_array : array<int> = [1, 2, 3]
    var literal_struct : S = S(i = 5)
    var nested_int : int = 65535
    var nested_bool : bool = bool(1)
    var nested_float : float = float(double(3.14))
    var nested_char : int8 = int8(120)
    var nested_str_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))
    var nested_str : array<int8> = "hello"
    var nested_array : array<int> = [1, 2, 3]
    var nested_struct : S = S(i = 5)
    var negative_int : int = -65535
    var int_arithmetic : int = 65535 + 65535 + 1
    var mixed_arithmetic : float = float(double(65535) + double(3.14) * double(120) - double(1))
    var parens : int = 65535 * (120 + 1)
    var ptr_arithmetic : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(unsafe(addr("hello"[0])) + (5 - 3)))))
    var widening_cast : uint64 = uint64(65535)
    var narrowing_cast : int8 = int8(65535)
    var conversion_cast : double = double(65535)
    var indexing : int8 = int8(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))
    var str_concatenation_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello hello world"[0])))))
    var str_concatenation : array<int8> = "hello hello world"
    var builtin : int = 0
    var ref_indexing : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))))))
    var ref_struct : S const? = unsafe(unsafe(reinterpret<S const?>(unsafe(addr(S(i = 5))))))
    var ternary : int = int(c2da_fresh0)
    var member : int = int(S(i = 5).i)
    var stmt_expr : float = float({
    var builtin_0 : int = 0
    var indexing_0 : int8 = int8(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))
    var mixed : float = float(double(65535) + double(3.14) * double(120) - double(1))
    var i : int = 0
    while (i < int(builtin_0)) {
        mixed = mixed + float(indexing_0)
        mixed
        i = i + 1
    }
    mixed
})
}
[export]
def local_consts() {
    var literal_int_0 : int const = int(65535)
    var literal_bool_0 : bool const = bool(1)
    var literal_float_0 : float const = float(float(double(3.14)))
    var literal_char_0 : int8 const = int8(int8(120))
    var literal_str_ptr_0 : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))
    var literal_str_0 : array<int8> const = "hello"
    var literal_array_0 : array<int> const = [1, 2, 3]
    var literal_struct_0 : S const = S(i = 5)
    var nested_int_0 : int const = int(65535)
    var nested_bool_0 : bool const = bool(1)
    var nested_float_0 : float const = float(float(double(3.14)))
    var nested_char_0 : int8 const = int8(int8(120))
    var nested_str_ptr_0 : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))
    var nested_str_0 : array<int8> const = "hello"
    var nested_array_0 : array<int> const = [1, 2, 3]
    var nested_struct_0 : S const = S(i = 5)
    var negative_int_0 : int const = int(-65535)
    var int_arithmetic_0 : int const = int(65535 + 65535 + 1)
    var mixed_arithmetic_0 : float const = float(float(double(65535) + double(3.14) * double(120) - double(1)))
    var parens_0 : int const = int(65535 * (120 + 1))
    var ptr_arithmetic_0 : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(unsafe(addr("hello"[0])) + (5 - 3)))))
    var widening_cast_0 : uint64 const = uint64(uint64(65535))
    var narrowing_cast_0 : int8 const = int8(int8(65535))
    var conversion_cast_0 : double const = double(double(65535))
    var indexing_1 : int8 const = int8(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))
    var str_concatenation_ptr_0 : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello hello world"[0])))))
    var str_concatenation_0 : array<int8> const = "hello hello world"
    var builtin_1 : int const = int(0)
    var ref_indexing_0 : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))))))
    var ref_struct_0 : S const? = unsafe(unsafe(reinterpret<S const?>(unsafe(addr(S(i = 5))))))
    var ternary_0 : int const = int(c2da_fresh1)
    var member_0 : int const = int(S(i = 5).i)
    var stmt_expr_0 : float const = float({
    var builtin_2 : int = 0
    var indexing_2 : int8 = int8(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))
    var mixed_0 : float = float(double(65535) + double(3.14) * double(120) - double(1))
    var i_0 : int = 0
    while (int(i_0) < int(builtin_2)) {
        mixed_0 = mixed_0 + float(indexing_2)
        mixed_0
        i_0 = i_0 + 1
    }
    mixed_0
})
}
var global_static_const_literal_int : int const = int(65535)

var global_static_const_literal_bool : bool const = bool(1)

var global_static_const_literal_float : float const = float(float(double(3.14)))

var global_static_const_literal_char : int8 const = int8(int8(120))

var global_static_const_literal_str_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))

var global_static_const_literal_str : array<int8> const = "hello"

var global_static_const_literal_array : array<int> const = [1, 2, 3]

var global_static_const_literal_struct : S const = S(i = 5)

var global_static_const_nested_int : int const = int(65535)

var global_static_const_nested_bool : bool const = bool(1)

var global_static_const_nested_float : float const = float(float(double(3.14)))

var global_static_const_nested_char : int8 const = int8(int8(120))

var global_static_const_nested_str_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))

var global_static_const_nested_str : array<int8> const = "hello"

var global_static_const_nested_array : array<int> const = [1, 2, 3]

var global_static_const_nested_struct : S const = S(i = 5)

var global_static_const_negative_int : int const = int(-65535)

var global_static_const_int_arithmetic : int const = int(65535 + 65535 + 1)

var global_static_const_mixed_arithmetic : float const = float(float(double(65535) + double(3.14) * double(120) - double(1)))

var global_static_const_parens : int const = int(65535 * (120 + 1))

var global_static_const_ptr_arithmetic : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(unsafe(addr("hello"[0])) + (5 - 3)))))

var global_static_const_widening_cast : uint64 const = uint64(uint64(65535))

var global_static_const_narrowing_cast : int8 const = int8(int8(65535))

var global_static_const_conversion_cast : double const = double(double(65535))

var global_static_const_indexing : int8 const = int8(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))

var global_static_const_str_concatenation_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello hello world"[0])))))

var global_static_const_str_concatenation : array<int8> const = "hello hello world"

var global_static_const_builtin : int const = int(0)

var global_static_const_ref_indexing : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))))))

var global_static_const_ref_struct : S const? = unsafe(unsafe(reinterpret<S const?>(unsafe(addr(S(i = 5))))))

var global_static_const_ternary : int const = int(c2da_fresh2)

var global_static_const_member : int const = int(S(i = 5).i)

[export]
def global_static_consts() {
    global_static_const_literal_int
    global_static_const_literal_bool
    global_static_const_literal_float
    global_static_const_literal_char
    global_static_const_literal_str_ptr
    unsafe(addr(global_static_const_literal_str[0]))
    unsafe(addr(global_static_const_literal_array[0]))
    global_static_const_literal_struct
    global_static_const_nested_int
    global_static_const_nested_bool
    global_static_const_nested_float
    global_static_const_nested_char
    global_static_const_nested_str_ptr
    unsafe(addr(global_static_const_nested_str[0]))
    unsafe(addr(global_static_const_nested_array[0]))
    global_static_const_nested_struct
    global_static_const_negative_int
    global_static_const_int_arithmetic
    global_static_const_mixed_arithmetic
    global_static_const_parens
    global_static_const_ptr_arithmetic
    global_static_const_widening_cast
    global_static_const_narrowing_cast
    global_static_const_conversion_cast
    global_static_const_indexing
    global_static_const_str_concatenation_ptr
    unsafe(addr(global_static_const_str_concatenation[0]))
    global_static_const_builtin
    global_static_const_ref_indexing
    global_static_const_ref_struct
    global_static_const_ternary
    global_static_const_member
}
var global_const_literal_int : int const = int(65535)

var global_const_literal_bool : bool const = bool(1)

var global_const_literal_float : float const = float(float(double(3.14)))

var global_const_literal_char : int8 const = int8(int8(120))

var global_const_literal_str_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))

var global_const_literal_str : array<int8> const = "hello"

var global_const_literal_array : array<int> const = [1, 2, 3]

var global_const_literal_struct : S const = S(i = 5)

var global_const_nested_int : int const = int(65535)

var global_const_nested_bool : bool const = bool(1)

var global_const_nested_float : float const = float(float(double(3.14)))

var global_const_nested_char : int8 const = int8(int8(120))

var global_const_nested_str_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello"[0])))))

var global_const_nested_str : array<int8> const = "hello"

var global_const_nested_array : array<int> const = [1, 2, 3]

var global_const_nested_struct : S const = S(i = 5)

var global_const_negative_int : int const = int(-65535)

var global_const_int_arithmetic : int const = int(65535 + 65535 + 1)

var global_const_mixed_arithmetic : float const = float(float(double(65535) + double(3.14) * double(120) - double(1)))

var global_const_parens : int const = int(65535 * (120 + 1))

var global_const_ptr_arithmetic : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(unsafe(addr("hello"[0])) + (5 - 3)))))

var global_const_widening_cast : uint64 const = uint64(uint64(65535))

var global_const_narrowing_cast : int8 const = int8(int8(65535))

var global_const_conversion_cast : double const = double(double(65535))

var global_const_indexing : int8 const = int8(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))

var global_const_str_concatenation_ptr : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr("hello hello world"[0])))))

var global_const_str_concatenation : array<int8> const = "hello hello world"

var global_const_builtin : int const = int(0)

var global_const_ref_indexing : int8 const? = unsafe(unsafe(reinterpret<int8 const?>(unsafe(addr(unsafe(unsafe(addr("hello"[0]))[int(double(3.14))]))))))

var global_const_ref_struct : S const? = unsafe(unsafe(reinterpret<S const?>(unsafe(addr(S(i = 5))))))

var global_const_ternary : int const = int(c2da_fresh3)

var global_const_member : int const = int(S(i = 5).i)

[export]
def test_fn_macro(var x : int) : int {
    return x * x
}
[export]
def reference_define() : int {
    var x_0 : int = 1
    x_0 = x_0 + 2
    x_0
    if (3 < (2 + 1) * 3) {
        x_0 = x_0 + (2 + 1) * 3
        x_0
    }
    return x_0
}
var fns : fn_ptrs const = fn_ptrs(v = 0, fn1 = 0, fn2 = 0)

var p : fn_ptrs const? = unsafe(unsafe(reinterpret<fn_ptrs const?>(unsafe(addr(fns)))))

[export]
def test_zstd() : uint64 {
    4
    var c2da_fresh4 : int = int(0)
    if (4 == int(uint64(4))) {
        c2da_fresh4 = 30
    } else {
        c2da_fresh4 = 31
    }
    return uint64(c2da_fresh4)
}
[export]
def stmt_expr_inc() : int {
    var a : int = 0
    var b : int? = unsafe(unsafe(reinterpret<int?>(unsafe(addr(a)))))
    {
        *b = *b + 1
        *b
        *b
    }
    return {
    *b = *b + 1
    *b
    *b
}
}
[export]
def test_switch(var x_1 : int) : int {
    if (x_1 == 1) {
        return 10
    } elif (x_1 == 2) {
        return 20
    }
    return 0
}
[export]
def test_silk_int16_MIN() : int {
    var _null : int8 = int8(unsafe(unsafe(addr(""[0]))[32768 + 32768]))
    return 32768
}
[export]
def use_extern_value() : int {
    return extern_fn()
}
[export]
def local_fn() : int {
    return 1234
}
[export]
def use_local_value() : int {
    return local_fn()
}
[export]
def use_portable_type(var len : uintptr_t) : bool {
    return unsafe(reinterpret<uintptr_t>(len)) <= unsafe(reinterpret<uintptr_t>(0xffffffffffffffffuL / uint(uint64(2))))
}
[export]
def ntlm_v2_blob_len(var ntlm : ntlmdata?) : uint {
    return uint(44 - 16) + uint(ntlm.target_info_len) + uint(4)
}
[export]
def late_init_var() : int {
    return {
    var i_1 : int
    i_1 = 1
    i_1
    i_1
}
}

[export] def main() : int {
    return 0
}
